Bug 1016746 - Consistently send 'child-process-shutdown' from ContentParent destruction. r=khuey, a=Preeti